feat: weather app

--- a/Weather/server/.env
+++ b/Weather/server/.env
@@ -4,7 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:12345678@localhost:6500/weather"
+# DATABASE_URL="postgresql://postgres:12345678@localhost:5432/weather"
+DATABASE_URL="postgresql://postgres:12345678@host.docker.internal:5432/weather"
 OPENWEATHER_API_KEY="fbe83a231829515ec6c39f141cf1208b"
-TEMPERATURE_THRESHOLD = 35
-CONSECUTIVE_TIMES = 3;
+EMAIL_PASS=lmxq kppr aqgr oehc
+EMAIL_USER=papaperez111@gmail.com
