--- a/Weather/server/package.json
+++ b/Weather/server/package.json
@@ -1,19 +1,33 @@
 {
   "scripts": {
-    "start": "ts-node src/server.ts"
+    "start": "nodemon ",
+    "db:sync": "npx prisma db push",
+    "dev": "yarn db:sync && nodemon ",
+    "test": "npx mocha -r tsx  src/tests/weatherTest.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.21.0",
+    "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.16",
     "axios": "^1.7.7",
+    "chai": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "ts-node": "^10.9.2",
+    "mocha": "^10.7.3",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.15",
+    "nodemon": "^3.1.7",
+    "sinon": "^19.0.2",
+    "tsx": "^4.19.1",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
+    "@types/chai": "^5.0.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/mocha": "^10.0.9",
+    "@types/sinon": "^17.0.3",
     "prisma": "^5.21.0"
   }
 }
